--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,11 +1,11 @@
-<div class="container">
+<div class="container py-3">
   <h1>Stupid Coaching</h1>
-  <div class="card border-secondary mb-3 p-3">
+  <div class="callout">
     <p><%= @answer %></p>
     <p><em>-You</em></p>
   </div>
 
-  <div class="card border-secondary mb-3 p-3">
+  <div class="callout callout-warning">
     <p><strong><%= @coach %></strong></p>
     <p><em>-Your coach</em></p>
   </div>
